<resources>
    <string name="app_name">addUserInteractivity</string>
    <string name="texto">Menos tu vientre, todo es confuso. Menos tu vientre, todo es futuro fugaz, pasado baldío, turbio. Menos tu vientre, todo es oculto. Menos tu vientre, todo inseguro, todo postrero, polvo sin mundo. Menos tu vientre, todo es oscuro. Menos tu vientre claro y profundo.</string>
    <string name="texto01">\'ll be fine by myself An empty assurance escapes my lips again. Memories of those bright days we spent together Invoke so much sorrow in me now.</string>
    <string name="texto04">If I was capable of living life all alone, I never would have loved in the first place.</string>
    <string name="texto05">our smell, and the way you talk. Pieces of love are still left all over my body. My wish, my wish is just That you, wherever you are now, are crying too.</string>
    <string name="texto06">The midsummer sunlight. The midwinter white snow In the seasons that rate the \"fragment of love\" flutters down The reason why I\'m happy but still a little lonely Is because my love for you is bigger than yours</string>
    <string name="texto07">You still hold the key The canary that has lost the reason to sing Inside the dark bird cage  Your scent, the way you speak \"Fragments of love\" still remain in my body My wish, my wish is just... For you to be happy</string>
</resources>